Refactoring and bug squashing

--- a/web/app/themes/Quick-Portfolio/assets/styles/layouts/_pages.scss
+++ b/web/app/themes/Quick-Portfolio/assets/styles/layouts/_pages.scss
@@ -190,6 +190,8 @@
       header {
         position:relative;
         max-height: 100%;
+        overflow-y: hidden;
+
         h2{
           margin:0 0 0.2em;
           font-size: 1.8rem;
@@ -205,7 +207,7 @@
           a {
             font-size: 0.9em;
           }
-        }
+        } // tags
       } // header
       .entry-content {
         display: none;
